Chore: added meta content device width. Added alert when movie is added to cart. Changed spacing in watchlist page and movie page. Fix: removed comments.

--- a/css/movie-page.css
+++ b/css/movie-page.css
@@ -1,3 +1,4 @@
+
 .line-divider {
     background-color: #FFD568;
     width: 1px;
@@ -54,8 +55,8 @@
     height: auto;
     border-radius: 8px;
     position: absolute;
-    right: 16px;
-    top: 156px;
+    right: 38px;
+    top: 280px;
 }
 
 #img-cover-desktop {
